--- a/ZdorovayaNorka.WebApi/ZdorovayaNorka.WebApi.csproj
+++ b/ZdorovayaNorka.WebApi/ZdorovayaNorka.WebApi.csproj
@@ -14,7 +14,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ZdorovayaNorka.Common.Entities\ZdorovayaNorka.Common.Entities.csproj" />
+    <ProjectReference Include="..\ZdorovayaNorka.Common.Helpers\ZdorovayaNorka.Common.Helpers.csproj" />
     <ProjectReference Include="..\ZdorovayaNorka.DAL\ZdorovayaNorka.DAL.csproj" />
+    <ProjectReference Include="..\ZdorovayaNorka.Service\ZdorovayaNorka.Service.csproj" />
   </ItemGroup>
 
   <ItemGroup>
